# sql-agent

./: .gitignore  Advanced_Query_Pipelines_over_Tabular_Data.ipynb  README.md  output.json  pyproject.toml  test.ipynb
scripts/: publish.py
sqlagent/: agent.py
sqlagent/components/: sql_parser_component.py
sqlagent/ingestions/: load_and_persist_object_index.py  load_and_persist_tables_row.py
tests/: test_ingestion.py  test_query.py
