[tool.poetry]
name = "sqlagent"
version = "0.1.0"
description = "SQL agent, query your database"
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = "^0.10.44"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
llmtext = "^0.1.8"

pyvis = "^0.3.2"
llama-index-vector-stores-lancedb = "^0.1.5"
llama-index-embeddings-openai = "^0.1.10"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pyvis = "^0.3.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
publish = "scripts.publish:run"
