[tool.poetry]
name = "sqlagent"
version = "1.0.3"
description = "SQL agent, query your database"
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-index = "^0.10.00"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
llama-index-embeddings-openai = "^0.1.00"
pinecone = "^4.0.0"
llama-index-vector-stores-pinecone = "^0.1.0"
llmtext = "1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pyvis = "^0.3.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
publish = "scripts.publish:run"
